--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,6 +3,24 @@
 <html lang="en">
   <head>
     <title>{% block title %}{% endblock %}</title>
+    <meta charset="utf-8">
     <script src="{% static 'js/htmx.min.js' %}" defer></script>
+    {% block extra_js %}{% endblock %}
+    <link rel="stylesheet" href="{% static 'css/simple.css' %}">
+    {% block extras_css %}{% endblock %}
   </head>
+  <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+    <header>
+      <h1><a href="{% url 'home' %}">Med</a></h1>
+      <h3>{% if not user.is_authenticated %}<a href="{% url 'account_login' %}">login{% else %}<a href="{% url 'account_logout' %}">logout{% endif %}</a>
+    </header>
+
+    <div>
+      {% block body %}{% endblock %}
+    </div>
+
+    <footer>
+      <p>no rights reserved</p>
+    </footer>
+  </body>
 </html>
