--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends '_base.html' %}
 
-</body>
-</html>
+{% block title %}Home{% endblock %}
+
+{% block body %}
+  welcome {% if user.is_authenticated %}{{ user.username }}{% else %}stranger{% endif %}
+{% endblock %}
+
+
