--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,7 +12,7 @@
   <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     <header>
       <h1><a href="{% url 'home' %}">Med</a></h1>
-      <h3>{% if not user.is_authenticated %}<a href="{% url 'account_login' %}">login{% else %}<a href="{% url 'account_logout' %}">logout{% endif %}</a>
+      <h3>{% if not user.is_authenticated %}<a href="{% url 'account_login' %}">login</a>{% else %}<a href="{% url 'profile' user.username %}">profile</a><a href="{% url 'account_logout' %}">logout</a>{% endif %}</h3>
     </header>
 
     <div>
