--- a/templates/_base.html
+++ b/templates/_base.html
@@ -13,6 +13,7 @@
     <header>
       <h1><a href="{% url 'home' %}">Med</a></h1>
       <h3>{% if not request.auser.is_authenticated %}<a href="{% url 'account_login' %}">login</a>{% else %}<a href="{%  url 'profile' request.auser.username %}">profile</a><a href="{% url 'account_logout' %}">logout</a>{% endif %}</h3>
+      <p>{{ request.auser }}</p>
     </header>
 
     <div>
