--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -2,16 +2,16 @@
 {% load jformat %}
 
 {% block body %}
-  <p>hello {{ user.username }}</p>
+  <p>hello {{ request.auser.username }}</p>
 
   <p>this page is to show the info we have about you</p>
 
-  <p>name: {% if user.first_name %}{{ user.first_name }}{% else %}unknown{% endif %}</p>
-  <p>last_name: {% if user.last_name %}{{ user.last_name }}{% else %}unknown{% endif %}</p>
+  <p>name: {% if request.auser.first_name %}{{ request.auser.first_name }}{% else %}unknown{% endif %}</p>
+  <p>last_name: {% if request.auser.last_name %}{{ request.auser.last_name }}{% else %}unknown{% endif %}</p>
 
-  <p>date of birth: {% if user.birth %}{{ user.birth|jformat }}{% else %}unknown{% endif %}</p>
-  <p>phone number: {% if user.phone_number %}{{ user.phone_number }}{% else %}unknown{% endif %}</p>
+  <p>date of birth: {% if request.auser.birth %}{{ request.auser.birth|jformat }}{% else %}unknown{% endif %}</p>
+  <p>phone number: {% if request.auser.phone_number %}{{ request.auser.phone_number }}{% else %}unknown{% endif %}</p>
 
 
-  <p><a href="{% url 'profile-edit' user.username %}">edit your info</a></p>
+  <p><a href="{% url 'profile-edit' request.auser.username %}">edit your info</a></p>
 {% endblock %}
